hydroflow/tests/compile-fail/surface_demuxenum_port_extra.stderr
error[E0599]: no variant named `Ellipse` found for enum `Shape`
  --> tests/compile-fail/surface_demuxenum_port_extra.rs:21:18
   |
6  |     enum Shape {
   |     ---------- variant `Ellipse` not found here
...
21 |         my_demux[Ellipse] -> for_each(std::mem::drop);
   |                  ^^^^^^^ variant not found in `Shape`

error[E0308]: mismatched types
  --> tests/compile-fail/surface_demuxenum_port_extra.rs:12:18
   |
12 |       let mut df = hydroflow_syntax! {
   |  __________________^
13 | |         my_demux = source_iter([
14 | |             Shape::Rectangle { w: 10.0, h: 8.0 },
15 | |             Shape::Square(9.0),
...  |
20 | |         my_demux[Square] -> for_each(std::mem::drop);
   | |                             ------------------------ the found opaque type
21 | |         my_demux[Ellipse] -> for_each(std::mem::drop);
22 | |     };
   | |_____^ expected `()`, found `(impl Pusherator<Item = _>, ())`
   |
   = note: expected unit type `()`
                  found tuple `(impl Pusherator<Item = _>, ())`
   = note: this error originates in the macro `$crate::var_expr` which comes from the expansion of the macro `hydroflow_syntax` (in Nightly builds, run with -Z macro-backtrace for more info)
